commented out version of next strategy and easier-on-the-eyes round shape for cells

--- a/src/e1.css
+++ b/src/e1.css
@@ -11,10 +11,9 @@ body {
 	color: #E5AD24; /* orange-yellow */
 	font-family: Arial, Sans-Serif
 }
-#ecoCanvas { 
-	width: 400;
-	height: 400;
-	border: 1; 
+#eco-canvas { 
+	width: 500;
+	height: 500;
 }
 .text {} 
 
